--- a/postman.desktop/app/src/main/res/layout/activity_main.xml
+++ b/postman.desktop/app/src/main/res/layout/activity_main.xml
@@ -32,4 +32,22 @@
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/textView" />
 
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start"
+        android:id="@+id/toggly"
+        android:onClick="toggleButton"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Readings:"
+        android:id="@+id/condition"
+        android:layout_below="@+id/toggly"
+        android:layout_alignEnd="@+id/toggly" />
+
 </RelativeLayout>
